# black_jack_sdl

./: .gitignore  CMakeLists.txt  readme.md
assets/: regras.txt
excludes/: test
includes/: GameConfig.h  GameManager.h  MenuScene.h  Object.h  ObjectEvent.h  Scene.h  SceneManager.h  Text.h
src/: EventManager.c  GameConfig.c  GameManager.c  MenuScene.c  Object.c  ObjectEvent.c  Scene.c  SceneManager.c  Settings.c  Text.c  main.c
src/core/: EventManager.c  EventManager.h  Event_Manager.c  Event_Manager.h  GameManager.c  GameManager.h  Game_Manager.c  Game_Manager.h  SceneManager.c  SceneManager.h  Scene_Manager.c  Scene_Manager.h
src/events/: Credit_Event.c  Credit_Event.h  Game_Event.c  Game_Event.h  MenuEvent.c  MenuEvent.h  Menu_Event.c  Menu_Event.h  ObjectEvent.c  Object_Event.c  Object_Event.h  Object_Interactions.c  Object_Interactions.h  SettingEvent.c  Setting_Scene_Event.c  Setting_Scene_Event.h  Text_Input_Event.c  Text_Input_Event.h  Window_Change_Screen.c  Window_Change_Screen.h  Winner_Event.c  Winner_Event.h
src/gameplay/: CPU.c  CPU.h  Card.c  Card.h  Deck.c  Deck.h  GameConfig.c  GameConfig.h  Game_Config.c  Game_Config.h  Game_Play.c  Game_Play.h  Player.c  Player.h  Rules.c  Rules.h  Window.c  Window.h
src/graphics/: AnimGif.c  AnimGif.h  Fade_Transition.c  Fade_Transition.h  Game_Points_Present_Render.c  Game_Points_Present_Render.h  Game_Turn_Name_Present_Render.c  Game_Turn_Name_Present_Render.h  Gif_Animation.c  Gif_Animation.h  Graphics_Utils.c  Graphics_Utils.h  Hit_Card_Animation.c  Hit_Card_Animation.h  Object.c  Object.h  Scene.c  (+3 more)
(+15 files in other folders)
